[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/GUI_DynamicFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Assets/ThaleahFat.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/InspectUI.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="InspectUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -980.0
margin_bottom = -220.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 0.0142975
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
margin_right = 260.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Name"
align = 1
valign = 1

[node name="RowHP" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 34.0
margin_right = 260.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/RowHP"]
margin_right = 16.0
margin_bottom = 15.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 1 )
text = "HP"

[node name="Value" type="Label" parent="Panel/VBoxContainer/RowHP"]
margin_left = 232.0
margin_right = 240.0
margin_bottom = 15.0
size_flags_horizontal = 8
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="Of" type="Label" parent="Panel/VBoxContainer/RowHP"]
margin_left = 244.0
margin_right = 248.0
margin_bottom = 15.0
size_flags_horizontal = 8
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "/"

[node name="Max" type="Label" parent="Panel/VBoxContainer/RowHP"]
margin_left = 252.0
margin_right = 260.0
margin_bottom = 15.0
size_flags_horizontal = 8
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="RowClass" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 53.0
margin_right = 260.0
margin_bottom = 68.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/RowClass"]
margin_right = 40.0
margin_bottom = 15.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Class"

[node name="Value" type="Label" parent="Panel/VBoxContainer/RowClass"]
margin_left = 252.0
margin_right = 260.0
margin_bottom = 15.0
size_flags_horizontal = 10
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="CharacterSpecific" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 260.0
margin_bottom = 182.0

[node name="RowStr" type="HBoxContainer" parent="Panel/VBoxContainer/CharacterSpecific"]
margin_right = 260.0
margin_bottom = 15.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowStr"]
margin_right = 62.0
margin_bottom = 15.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Strength"

[node name="Value" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowStr"]
margin_left = 252.0
margin_right = 260.0
margin_bottom = 15.0
size_flags_horizontal = 10
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="RowInt" type="HBoxContainer" parent="Panel/VBoxContainer/CharacterSpecific"]
margin_top = 19.0
margin_right = 260.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowInt"]
margin_right = 85.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "Intelligence"

[node name="Value" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowInt"]
margin_left = 252.0
margin_right = 260.0
margin_bottom = 15.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="RowAgi" type="HBoxContainer" parent="Panel/VBoxContainer/CharacterSpecific"]
margin_top = 38.0
margin_right = 260.0
margin_bottom = 53.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowAgi"]
margin_right = 44.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "Agility"

[node name="Value" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowAgi"]
margin_left = 252.0
margin_right = 260.0
margin_bottom = 15.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="RowCon" type="HBoxContainer" parent="Panel/VBoxContainer/CharacterSpecific"]
margin_top = 57.0
margin_right = 260.0
margin_bottom = 72.0

[node name="Text" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowCon"]
margin_right = 83.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "Constitution"

[node name="Value" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowCon"]
margin_left = 252.0
margin_right = 260.0
margin_bottom = 15.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="RowStatus" type="HBoxContainer" parent="Panel/VBoxContainer/CharacterSpecific"]
margin_top = 76.0
margin_right = 260.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowStatus"]
margin_right = 46.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "Status"

[node name="Value" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowStatus"]
margin_left = 252.0
margin_right = 260.0
margin_bottom = 15.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="RowExp" type="HBoxContainer" parent="Panel/VBoxContainer/CharacterSpecific"]
margin_top = 95.0
margin_right = 260.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowExp"]
margin_right = 75.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "Experience"

[node name="Value" type="Label" parent="Panel/VBoxContainer/CharacterSpecific/RowExp"]
margin_left = 252.0
margin_right = 260.0
margin_bottom = 15.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 1 )
text = "5"
